--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+0.9.18
+Fix clearlogo on home issues
+Add tracknaming template option in skinsettings > library
+Add use standard labels instead of titles in skinsettings > library
+Change skinsetting strings to be more humanistic by adding verbs (use, apply, enable, choose, customise, display, etc.)
+
 0.9.17
 Fix subtitles/audio/video settings dialog not hiding when offset slider is visible
 Add add-ons to search dialog
