--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -42,12 +42,12 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31006"
-msgid "Multiple widget layout"
+msgid "Use multiple widget layout"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31007"
-msgid "Horizontal menu"
+msgid "Use horizontal menu in multiple widget layout"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -57,7 +57,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31009"
-msgid "Press DOWN to access submenu hub"
+msgid "Open submenu hub when focusing submenu"
 msgstr ""
 
 #: /1080i/script-skinshortcuts.xml
@@ -77,7 +77,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31013"
-msgid "Select box colour"
+msgid "Choose selection box colour"
 msgstr ""
 
 #: /1080i/MyVideoNav.xml
@@ -92,7 +92,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31016"
-msgid "Swap info and list positions"
+msgid "Swap info and list positions in mediainfo viewtypes"
 msgstr ""
 
 #: /shortcuts/overrides.xml
@@ -107,7 +107,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31019"
-msgid "Aura style showcase views"
+msgid "Use Aura style showcase viewtypes"
 msgstr ""
 
 #: /1080i/script-globalsearch-main.xml
@@ -122,7 +122,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31022"
-msgid "Animated artwork"
+msgid "Use animated artwork where available"
 msgstr ""
 
 #: /1080i/Includes_Items.xml
@@ -447,12 +447,12 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31087"
-msgid "Colour overlay effect"
+msgid "Display colour overlay"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31088"
-msgid "Scrolling text effect"
+msgid "Display scrolling text effect"
 msgstr ""
 
 #: /1080i/Includes_Labels.xml
@@ -477,7 +477,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31093"
-msgid "Slim PVR Guide"
+msgid "Use slim PVR Guide"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -485,14 +485,14 @@ msgctxt "#31094"
 msgid "Apply colordiffuse on icons"
 msgstr ""
 
-#: /1080i/Includes_Labels.xml
+#: /1080i/SkinSettings.xml
 msgctxt "#31095"
-msgid "Press LEFT to access submenu hub"
+msgid "Use standard labels instead of titles in list views"
 msgstr ""
 
-#: /1080i/Includes_Labels.xml
+#: /1080i/SkinSettings.xml
 msgctxt "#31096"
-msgid "Press UP to access submenu hub"
+msgid "Use track naming template for songs"
 msgstr ""
 
 #: /1080i/Includes_Home.xml
@@ -567,7 +567,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31113"
-msgid "Global widget"
+msgid "Set global widget"
 msgstr ""
 
 msgctxt "#31114"
@@ -575,11 +575,11 @@ msgid "Now Playing"
 msgstr ""
 
 msgctxt "#31118"
-msgid "Artist slideshow"
+msgid "Display artist slideshow"
 msgstr ""
 
 msgctxt "#31119"
-msgid "Visualisation behind slideshow"
+msgid "Display visualisation behind slideshow"
 msgstr ""
 
 msgctxt "#31120"
@@ -587,7 +587,7 @@ msgid "Animate artist slideshow"
 msgstr ""
 
 msgctxt "#31121"
-msgid "Fanart"
+msgid "Display fanart"
 msgstr ""
 
 #: /1080i/MusicOSD.xml
@@ -639,7 +639,7 @@ msgid "Submenu Items"
 msgstr ""
 
 msgctxt "#31168"
-msgid "Startup video or music playlist"
+msgid "Choose startup video or music playlist"
 msgstr ""
 
 msgctxt "#31172"
@@ -879,7 +879,7 @@ msgid "Extended info"
 msgstr ""
 
 msgctxt "#31286"
-msgid "Highlight colour"
+msgid "Customise highlight colour"
 msgstr ""
 
 #: /1080i/DialogBusy.xml
@@ -964,7 +964,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31317"
-msgid "Watched indicators"
+msgid "Display watched indicators"
 msgstr ""
 
 #: /1080i/Settings.xml
@@ -1034,7 +1034,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31377"
-msgid "Video lyrics"
+msgid "Display video lyrics"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
