--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -487,7 +487,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31095"
-msgid "Use standard labels instead of titles in list views"
+msgid "Use standard labels instead of titles in add-on list views"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
