--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Fix clearlogo on home issues
 Add tracknaming template option in skinsettings > library
 Add use standard labels instead of titles in skinsettings > library
 Change skinsetting strings to be more humanistic by adding verbs (use, apply, enable, choose, customise, display, etc.)
+Update alphabet strip to skip to next/prev letter
 
 0.9.17
 Fix subtitles/audio/video settings dialog not hiding when offset slider is visible
