--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.19
+Clean-up in-built game support
+
 0.9.18
 Fix clearlogo on home issues
 Add tracknaming template option in skinsettings > library
