icons in multiwidgets

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -574,6 +574,11 @@ msgctxt "#31114"
 msgid "Now Playing"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31115"
+msgid "Display icons"
+msgstr ""
+
 msgctxt "#31118"
 msgid "Display artist slideshow"
 msgstr ""
