support for listitem helper

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 0.9.21
 Add sdtv and hd-dvd flags
+Support for listitem helper in showcase view (others coming soon)
 
 0.9.20
 Fix animation bounce
