--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -579,6 +579,11 @@ msgctxt "#31115"
 msgid "Display icons"
 msgstr ""
 
+#: /1080i/Custom_1118_EnableRatings.xml
+msgctxt "#31116"
+msgid "Choose ratings"
+msgstr ""
+
 msgctxt "#31118"
 msgid "Display artist slideshow"
 msgstr ""
