top250 tvshows and icon mode home

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
 0.9.22
 Add hint arrows to info dialogs
+Add icon mode to simple home
+Add top250 skinhelper to tvshows/movies
 
 0.9.21
 Add sdtv and hd-dvd flags
