--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Add hint arrows to info dialogs
 Add icon mode to simple home
 Add top250 skinhelper to tvshows/movies
 Fix for list view years slide
+Add new artwork osd
 
 0.9.21
 Add sdtv and hd-dvd flags
