--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+0.9.23
+Add hint arrows to extendedinfo dialogs
+Add option to change autoscroll and timerperimage
+Bump up size of topbar icons slightly (60px -> 70px)
+
 0.9.22
 Add hint arrows to info dialogs
 Add icon mode to simple home
