--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -640,6 +640,11 @@ msgctxt "#31128"
 msgid "Set autoscroll and time per image"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31129"
+msgid "Use square artist image on music osd"
+msgstr ""
+
 #: /1080i/MusicOSD.xml
 msgctxt "#31131"
 msgid "Colour overlay"
