short width osd opt

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -645,9 +645,19 @@ msgctxt "#31129"
 msgid "Use square artist image on music osd"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31130"
+msgid "Display artist image on music osd"
+msgstr ""
+
 #: /1080i/MusicOSD.xml
 msgctxt "#31131"
 msgid "Colour overlay"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31132"
+msgid "Use short music osd"
 msgstr ""
 
 msgctxt "#31141"
