--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.24
+Add landscape art and only fallback to clearlogo
+
 0.9.23
 Add hint arrows to extendedinfo dialogs
 Add option to change autoscroll and timerperimage
