add localiced string ,search

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -1236,3 +1236,8 @@ msgstr ""
 msgctxt "#31431"
 msgid "Landscape Wall Small"
 msgstr ""
+
+#: /1080i/Custom_1138_Search.xml
+msgctxt "#31432"
+msgid "By Artist Named"
+msgstr ""
