change to square for musicvideo search

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -1239,5 +1239,5 @@ msgstr ""
 
 #: /1080i/Custom_1138_Search.xml
 msgctxt "#31432"
-msgid "By Artist Named"
+msgid "Music Videos by Artist Named"
 msgstr ""
