--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 0.9.26
 Merge marduk's musicvideo search code
 Update videoinfo to use musicinfo for musicvideos
+Hide season view episodes if container is updating
 
 0.9.25
 Increase total widget limit to 50
