prefer poster for blur setting

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -602,7 +602,7 @@ msgid "Animate artist slideshow"
 msgstr ""
 
 msgctxt "#31121"
-msgid "Display fanart"
+msgid "Display fanart in background"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -660,6 +660,11 @@ msgctxt "#31132"
 msgid "Use short music osd"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31133"
+msgid "Prefer poster image for blur"
+msgstr ""
+
 msgctxt "#31141"
 msgid "YouTube"
 msgstr ""
@@ -680,7 +685,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31154"
-msgid "Only use blur in info dialog"
+msgid "Only apply blur in info dialog"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -912,7 +917,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31275"
-msgid "Blur fanart"
+msgid "Blur background"
 msgstr ""
 
 #: /shortcuts/overrides.xml
