--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -665,6 +665,11 @@ msgctxt "#31133"
 msgid "Prefer poster image for blur"
 msgstr ""
 
+#: /1080i/Includes_View_50_List.xml
+msgctxt "#31134"
+msgid "Tri-Panel"
+msgstr ""
+
 msgctxt "#31141"
 msgid "YouTube"
 msgstr ""
