--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+0.9.28
+Add Tri-Panel view
+Add genres and languages furniture option
+
 0.9.27
 Add Settings Widget
 Add prefer poster for blur setting
