fix for login screen

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 0.9.28
 Add Tri-Panel view
 Add genres and languages furniture option
+Fix login screen for light theme
 
 0.9.27
 Add Settings Widget
