--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Add Tri-Panel view
 Add genres and languages furniture option
 Fix login screen for light theme
+Fix SettingsProfile cut-off text
 
 0.9.27
 Add Settings Widget
