some setting tweaks

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,8 @@ Add genres and languages furniture option
 Fix login screen for light theme
 Fix SettingsProfile cut-off text
 Fix Autoscroll on single widgets
+Simplify some skin settings
+Add settings to disable video info dialog lists
 
 0.9.27
 Add Settings Widget
