--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -40,14 +40,14 @@ msgctxt "#31005"
 msgid "Sunrise at"
 msgstr ""
 
-#: /1080i/SkinSettings.xml
+#: /1080i/Custom_1119_EnableInfoLists.xml
 msgctxt "#31006"
-msgid "Use multiple widget layout"
+msgid "Collection"
 msgstr ""
 
-#: /1080i/SkinSettings.xml
+#: /1080i/Custom_1119_EnableInfoLists.xml
 msgctxt "#31007"
-msgid "Use horizontal menu in multiple widget layout"
+msgid "Use script.extendedinfo"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -57,7 +57,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31009"
-msgid "Open submenu hub when focusing submenu"
+msgid "Replace submenu with hub"
 msgstr ""
 
 #: /1080i/script-skinshortcuts.xml
@@ -77,7 +77,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31013"
-msgid "Choose selection box colour"
+msgid "Selection box"
 msgstr ""
 
 #: /1080i/MyVideoNav.xml
@@ -87,12 +87,12 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31015"
-msgid "Use script.extendedinfo in video information dialogs"
+msgid "Choose info-dialog lists"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31016"
-msgid "Swap info and list positions in mediainfo viewtypes"
+msgid "Mirror mediainfo viewtypes"
 msgstr ""
 
 #: /shortcuts/overrides.xml
@@ -107,7 +107,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31019"
-msgid "Use Aura style showcase viewtypes"
+msgid "Left-align showcase viewtypes"
 msgstr ""
 
 #: /1080i/script-globalsearch-main.xml
@@ -122,7 +122,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31022"
-msgid "Use animated artwork where available"
+msgid "Animated artwork"
 msgstr ""
 
 #: /1080i/Includes_Items.xml
@@ -137,12 +137,12 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31025"
-msgid "Display codec information"
+msgid "Codec flags"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31026"
-msgid "Display header"
+msgid "Library location"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -157,7 +157,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31029"
-msgid "Display now playing"
+msgid "Now playing info"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -472,27 +472,27 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31092"
-msgid "Use Roboto fontset for plot boxes"
+msgid "Plot boxes use Roboto font"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31093"
-msgid "Use slim PVR Guide"
+msgid "Slim PVR Guide"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31094"
-msgid "Apply colordiffuse on icons"
+msgid "Apply colordiffuse to icons"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31095"
-msgid "Use standard labels instead of titles in add-on list views"
+msgid "Add-on list viewtypes use default labels"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31096"
-msgid "Use track naming template for songs"
+msgid "Songs use track-naming template"
 msgstr ""
 
 #: /1080i/Includes_Home.xml
@@ -546,7 +546,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31108"
-msgid "Display minimal busy loader"
+msgid "Minimal busy loader"
 msgstr ""
 
 msgctxt "#31109"
@@ -567,7 +567,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31113"
-msgid "Set global widget"
+msgid "Global widget"
 msgstr ""
 
 msgctxt "#31114"
@@ -602,7 +602,7 @@ msgid "Animate artist slideshow"
 msgstr ""
 
 msgctxt "#31121"
-msgid "Display fanart in background"
+msgid "Fanart"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -670,6 +670,36 @@ msgctxt "#31134"
 msgid "Tri-Panel"
 msgstr ""
 
+#: /1080i/Custom_1119_EnableInfoLists.xml
+msgctxt "#31135"
+msgid "Similar"
+msgstr ""
+
+#: /1080i/Custom_1119_EnableInfoLists.xml
+msgctxt "#31136"
+msgid "Next-up episodes"
+msgstr ""
+
+#: /1080i/Custom_1119_EnableInfoLists.xml
+msgctxt "#31137"
+msgid "Featuring cast-members"
+msgstr ""
+
+#: /1080i/Custom_1119_EnableInfoLists.xml
+msgctxt "#31138"
+msgid "Extras and special features"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31139"
+msgid "Widgets and Layout"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31140"
+msgid "Background images"
+msgstr ""
+
 msgctxt "#31141"
 msgid "YouTube"
 msgstr ""
@@ -680,17 +710,77 @@ msgid "Scrolling text"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
+msgctxt "#31143"
+msgid "Miscellaneous"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31144"
+msgid "Fonts and Artwork"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
 msgctxt "#31145"
 msgid "Display poster and plot when video is paused"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31146"
+msgid "Lists and Ratings"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31147"
+msgid "Headers"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31148"
+msgid "Section name"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31149"
+msgid "Clock and weather"
+msgstr ""
+
 msgctxt "#31150"
-msgid "Set fallback image"
+msgid "Fallback image"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31151"
+msgid "Genres$COMMA studio$COMMA and language tags"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31152"
+msgid "Viewtypes"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31153"
+msgid "Information overlays"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31154"
-msgid "Only apply blur in info dialog"
+msgid "Only blur info dialog"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31155"
+msgid "Footers"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31156"
+msgid "PVR Guide"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31157"
+msgid "General PVR Options"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -708,13 +798,33 @@ msgctxt "#31160"
 msgid "Music sources"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31161"
+msgid "Supported Add-ons"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31162"
+msgid "Backup and Restore"
+msgstr ""
+
 #: /shortcuts/overrides.xml
 msgctxt "#31163"
 msgid "Submenu Items"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31164"
+msgid "Start-up"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31165"
+msgid "Custom lists"
+msgstr ""
+
 msgctxt "#31168"
-msgid "Choose startup video or music playlist"
+msgid "Startup video or playlist"
 msgstr ""
 
 msgctxt "#31172"
@@ -954,7 +1064,7 @@ msgid "Extended info"
 msgstr ""
 
 msgctxt "#31286"
-msgid "Customise highlight colour"
+msgid "Highlight colour"
 msgstr ""
 
 #: /1080i/DialogBusy.xml
@@ -1039,7 +1149,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31317"
-msgid "Display watched indicators"
+msgid "Watched indicators"
 msgstr ""
 
 #: /1080i/Settings.xml
