--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -581,7 +581,7 @@ msgstr ""
 
 #: /1080i/Custom_1118_EnableRatings.xml
 msgctxt "#31116"
-msgid "Choose ratings"
+msgid "Choose displayed ratings"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -726,7 +726,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31146"
-msgid "Lists and Ratings"
+msgid "General options"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -778,9 +778,9 @@ msgctxt "#31156"
 msgid "PVR Guide"
 msgstr ""
 
-#: /1080i/SkinSettings.xml
+#: /1080i/Custom_1120_EnableSearchLists.xml
 msgctxt "#31157"
-msgid "General PVR Options"
+msgid "Artist's Albums"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -821,6 +821,16 @@ msgstr ""
 #: /1080i/SkinSettings.xml
 msgctxt "#31165"
 msgid "Custom lists"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31166"
+msgid "Choose search lists"
+msgstr ""
+
+#: /1080i/Custom_1120_EnableSearchLists.xml
+msgctxt "#31167"
+msgid "Music video artists"
 msgstr ""
 
 msgctxt "#31168"
