a tweak for exp search

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -837,6 +837,11 @@ msgctxt "#31168"
 msgid "Startup video or playlist"
 msgstr ""
 
+#: /1080i/Custom_1120_EnableSearchLists.xml
+msgctxt "#31169"
+msgid "Edit custom search lists"
+msgstr ""
+
 msgctxt "#31172"
 msgid "Display music visualisation in background"
 msgstr ""
