--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -842,6 +842,11 @@ msgctxt "#31169"
 msgid "Edit custom search lists"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31170"
+msgid "Clearlogo"
+msgstr ""
+
 msgctxt "#31172"
 msgid "Display music visualisation in background"
 msgstr ""
