fix trailer visibility

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Experimental custom search function
 Add clearlogo option to furniture
 Fix for season posters
+Fix trailer button visibility
 
 0.9.28
 Add Tri-Panel view
