--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -750,7 +750,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31151"
-msgid "Genres$COMMA studio$COMMA and language tags"
+msgid "Studio and language tags"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -845,6 +845,11 @@ msgstr ""
 #: /1080i/SkinSettings.xml
 msgctxt "#31170"
 msgid "Clearlogo"
+msgstr ""
+
+#: /1080i/Includes_View_52_Showcase.xml
+msgctxt "#31171"
+msgid "Season Info 2"
 msgstr ""
 
 msgctxt "#31172"
