fix info list inclusion

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.30
+Change info lists from visibility conditions to include conditions (stop prompt to install plugins)
+
 0.9.29
 Experimental custom search function
 Add clearlogo option to furniture
