search lists inclusions

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
 0.9.30
-Change info lists from visibility conditions to include conditions (stop prompt to install plugins)
+Stop prompt for installing plugins for info/search lists if disabled/not-installed
+ - Change info lists from visibility conditions to include conditions
+ - Change search lists from visibility conditions to include conditions
 
 0.9.29
 Experimental custom search function
