--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -860,6 +860,11 @@ msgctxt "#31173"
 msgid "Recently added"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31174"
+msgid "Landscape art"
+msgstr ""
+
 msgctxt "#31176"
 msgid "Delete Settings Shortcut"
 msgstr ""
