fix info jumping

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Stop prompt for installing plugins for info/search lists if disabled/not-installed
  - Change info lists from visibility conditions to include conditions
  - Change search lists from visibility conditions to include conditions
+Fix info jumping down on single widget in multiwidget layout
 
 0.9.29
 Experimental custom search function
