--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Stop prompt for installing plugins for info/search lists if disabled/not-install
  - Change info lists from visibility conditions to include conditions
  - Change search lists from visibility conditions to include conditions
 Fix info jumping down on single widget in multiwidget layout
+Fix for season view 2
 
 0.9.29
 Experimental custom search function
