poster plot hide shows title

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.31
+- Hide poster/plot on osd now shows title and infoline
+
 0.9.30
 Stop prompt for installing plugins for info/search lists if disabled/not-installed
  - Change info lists from visibility conditions to include conditions
