pvr start end time opt

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -865,6 +865,11 @@ msgctxt "#31174"
 msgid "Landscape art"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31175"
+msgid "Replace genre with program times"
+msgstr ""
+
 msgctxt "#31176"
 msgid "Delete Settings Shortcut"
 msgstr ""
