--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 - Hide poster/plot on osd now shows title and infoline
 - Weather widget can focus
 - Option to show program times instead of genre in PVR guide
+- Hide info for single widget if no label available.
 
 0.9.30
 Stop prompt for installing plugins for info/search lists if disabled/not-installed
