potential fix for sets issue

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@
 - Option to show program times instead of genre in PVR guide
 - Hide info for single widget if no label available.
 - Reconfigure addon info dialog
+- Potential fix for sets issue in info dialog
 
 0.9.30
 Stop prompt for installing plugins for info/search lists if disabled/not-installed
