tweak osd settings

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -407,7 +407,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31079"
-msgid "Pause video when opening info"
+msgid "Pause when opening info dialog"
 msgstr ""
 
 #: /1080i/Includes_Labels.xml
@@ -721,7 +721,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31145"
-msgid "Display poster and plot when video is paused"
+msgid "Always display on-screen info"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -942,7 +942,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31201"
-msgid "Pressing info only displays seekbar (hides poster and plot)"
+msgid "Simple on-screen info (hide poster and plot)"
 msgstr ""
 
 #: /shortcuts/overrides.xml
