--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@
 - Reconfigure addon info dialog
 - Potential fix for sets issue in info dialog
 - Fix for lovefilm scroll plus nextaired text colour
+- Tweak OSD settings
 
 0.9.30
 Stop prompt for installing plugins for info/search lists if disabled/not-installed
