--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 0.9.32
 - Fix for skinhelper/listitemhelper imdb rating and votes on tvshows
 - Only use star rating for library ratings as db rating might not be imdb
+- Add aspectratio flags
 
 0.9.31
 - Hide poster/plot on osd now shows title and infoline
