fix widget limit none

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 - Fix for skinhelper/listitemhelper imdb rating and votes on tvshows
 - Only use star rating for library ratings as db rating might not be imdb
 - Add aspectratio flags
+- Fix widget limit none
 
 0.9.31
 - Hide poster/plot on osd now shows title and infoline
