--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+0.9.33
+- Fixed-width text option for Basic and Horizontal Multi
+- Make fixed-width basic home menu new default setting
+
 0.9.32
 - Fix for skinhelper/listitemhelper imdb rating and votes on tvshows
 - Only use star rating for library ratings as db rating might not be imdb
