--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 0.9.33
 - Fixed-width text option for Basic and Horizontal Multi
 - Make fixed-width basic home menu new default setting
+- Fade unfocused list text
+- Add tmdb rating
 
 0.9.32
 - Fix for skinhelper/listitemhelper imdb rating and votes on tvshows
