autoscroll widget opt

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@
 - Make fixed-width basic home menu new default setting
 - Fade unfocused list text
 - Add tmdb rating
+- Add option to disable autoscroll
 
 0.9.32
 - Fix for skinhelper/listitemhelper imdb rating and votes on tvshows
