--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@
 - Fade unfocused list text
 - Add tmdb rating
 - Add option to disable autoscroll
+- Play album
 
 0.9.32
 - Fix for skinhelper/listitemhelper imdb rating and votes on tvshows
