--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@
 - Add tmdb rating
 - Add option to disable autoscroll
 - Play album
+- TMDB
 
 0.9.32
 - Fix for skinhelper/listitemhelper imdb rating and votes on tvshows
