--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@
 - Add option to disable autoscroll
 - Play album
 - TMDB
+- Bump font weight for unfocused menu
 
 0.9.32
 - Fix for skinhelper/listitemhelper imdb rating and votes on tvshows
