--- a/language/resource.language.es_es/strings.po
+++ b/language/resource.language.es_es/strings.po
@@ -108,7 +108,7 @@ msgstr "Acceso directo común"
 #: /1080i/SkinSettings.xml
 msgctxt "#31019"
 msgid "Left-align showcase viewtypes"
-msgstr "Alinear a la izquierda el escaparate de imagenes en los tipos de vista"
+msgstr "Alinear a la izquierda escaparate de imágenes en los tipos de vista"
 
 #: /1080i/script-globalsearch-main.xml
 msgctxt "#31020"
@@ -158,7 +158,7 @@ msgstr "Restablecer configuración del skin a valores por defecto (ADVERTENCIA: 
 #: /1080i/SkinSettings.xml
 msgctxt "#31029"
 msgid "Now playing info"
-msgstr "Información reproduciendo"
+msgstr "Información sobre la reproducción"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31030"
@@ -599,7 +599,7 @@ msgstr "Mostrar presentación de diapositivas detrás de visualización"
 
 msgctxt "#31120"
 msgid "Animate artist slideshow"
-msgstr "Animar presentación de diapositivas del artista"
+msgstr "Mostrar animación en la presentación de diapositivas del artista"
 
 msgctxt "#31121"
 msgid "Fanart"
@@ -1290,7 +1290,7 @@ msgstr "Agrupar grabaciones eliminadas"
 #: /1080i/SkinSettings.xml
 msgctxt "#31386"
 msgid "Auto close OSD controls after delay (in seconds)"
-msgstr "Retraso en el cierre automático de los controles OSD (en segundos)"
+msgstr "Tiempo de espera para cierre automático de los controles OSD (en segundos)"
 
 #: /1080i/Includes_Topbar.xml
 msgctxt "#31391"
