--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+0.9.34
+- Change default setting to use standard labels for add-ons
+- Change default setting to use pvr icons without colordiffuse
+
 0.9.33
 - Fixed-width text option for Basic and Horizontal Multi
 - Make fixed-width basic home menu new default setting
