new pvr osd channels switcher

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,5 @@
 0.9.34
+- New PVR channel switcher
 - Change default setting to use standard labels for add-ons
 - Change default setting to use pvr icons without colordiffuse
 
