--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -878,6 +878,11 @@ msgctxt "#31177"
 msgid "Are you sure you want to remove the settings shortcut?[CR]Please ensure that you have an alternative method of accessing settings before you remove this shortcut."
 msgstr ""
 
+#: /1080i/DialogPVRChannelsOSD.xml
+msgctxt "#31178"
+msgid "Up Next"
+msgstr ""
+
 #: /1080i/Includes_Home.xml
 msgctxt "#31179"
 msgid "Lock view"
@@ -900,6 +905,11 @@ msgstr ""
 #: /shortcuts/overrides.xml
 msgctxt "#31183"
 msgid "Default Widgets"
+msgstr ""
+
+#: /1080i/DialogPVRChannelsOSD.xml
+msgctxt "#31184"
+msgid "On Now"
 msgstr ""
 
 #: /shortcuts/overrides.xml
