updates to pvr osd

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,6 @@
 0.9.34
+- New PVR osd info / controls
+- New PVR osd guide
 - New PVR channel switcher
 - Change default setting to use standard labels for add-ons
 - Change default setting to use pvr icons without colordiffuse
