auto theme switcher

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -917,8 +917,18 @@ msgctxt "#31185"
 msgid "Recently Added Movies"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31186"
+msgid "Theme Switching"
+msgstr ""
+
 msgctxt "#31187"
 msgid "Random Albums"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31188"
+msgid "Automatically switch color theme based on time (Light 6am - Dark 6pm)"
 msgstr ""
 
 #: /shortcuts/overrides.xml
