--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.35
+- Theme switcher between light and dark depending on time of day (Light 6am - Dark 6pm)
+
 0.9.34
 - New PVR osd info / controls
 - New PVR osd guide
