--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 0.9.35
 - Theme switcher between light and dark depending on time of day (Light 6am - Dark 6pm)
 - Slightly increase pvr osd opacity
+- Don't show pvr plot box if unavailable
 
 0.9.34
 - New PVR osd info / controls
