--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -931,6 +931,11 @@ msgctxt "#31188"
 msgid "Automatically switch color theme based on time (Light 6am - Dark 6pm)"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31189"
+msgid "Geometric pattern on panels"
+msgstr ""
+
 #: /shortcuts/overrides.xml
 msgctxt "#31190"
 msgid "Recently Played Movies"
