slower blur transition

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@
 - Don't show pvr plot box if unavailable
 - Option to disable geometric panels
 - Add search button to fixed width 
+- Slower blur transition
 
 0.9.34
 - New PVR osd info / controls
