8 row simple list for pvr channels

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -941,6 +941,11 @@ msgctxt "#31190"
 msgid "Recently Played Movies"
 msgstr ""
 
+#: /1080i/MyPVRChannels.xml
+msgctxt "#31191"
+msgid "Info List"
+msgstr ""
+
 #: /shortcuts/overrides.xml
 msgctxt "#31194"
 msgid "Recently Played TV Shows"
