--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 0.9.36
 - Fix for long season numbers
+- Add 8 row simple list for pvr
 
 0.9.35
 - Theme switcher between light and dark depending on time of day (Light 6am - Dark 6pm)
