--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 0.9.36
 - Fix for long season numbers
 - Add 8 row simple list for pvr
+- Add button id 10 for pvr info
 
 0.9.35
 - Theme switcher between light and dark depending on time of day (Light 6am - Dark 6pm)
