linespacing roboto plotbox and set as default

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -472,7 +472,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31092"
-msgid "Plot boxes use Roboto font"
+msgid "Plot boxes use Faune font"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
