fix for auto vis

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@
 - Add button id 10 for pvr info
 - Set Roboto as default plotbox font
 - Add linespacing variant for Roboto plot
+- Fix for autovis
 
 0.9.35
 - Theme switcher between light and dark depending on time of day (Light 6am - Dark 6pm)
