fake landscape icon in icon wall view

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.37
+- Add fake landscape icon to Icon Wall view for square icons
+
 0.9.36
 - Fix for long season numbers
 - Add 8 row simple list for pvr
