--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 0.9.37
 - Add fake landscape icon to Icon Wall view for square icons
 - Preliminary Sets Info addition
+- Fix for icon widgets stretching
 
 0.9.36
 - Fix for long season numbers
