--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 - Add fake landscape icon to Icon Wall view for square icons
 - Preliminary Sets Info addition
 - Fix for icon widgets stretching
+- Fix for single PVR info in multiwidget layout
 
 0.9.36
 - Fix for long season numbers
