extendedinfo button in osd

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.38
+- Re-add extended info button in osd
+
 0.9.37
 - Add fake landscape icon to Icon Wall view for square icons
 - Preliminary Sets Info addition
