--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -951,14 +951,29 @@ msgctxt "#31192"
 msgid "Numeric star rating"
 msgstr ""
 
+#: /1080i/Includes_Items.xml
+msgctxt "#31193"
+msgid "Select Art (Kodi)"
+msgstr ""
+
 #: /shortcuts/overrides.xml
 msgctxt "#31194"
 msgid "Recently Played TV Shows"
 msgstr ""
 
+#: /1080i/Includes_Items.xml
+msgctxt "#31195"
+msgid "Select Art (Artwork Beef)"
+msgstr ""
+
 #: /shortcuts/overrides.xml
 msgctxt "#31196"
 msgid "In Progress TV Shows"
+msgstr ""
+
+#: /1080i/Includes_Items.xml
+msgctxt "#31197"
+msgid "Download all art"
 msgstr ""
 
 #: /shortcuts/overrides.xml
@@ -987,6 +1002,11 @@ msgstr ""
 
 msgctxt "#31203"
 msgid "Artwork"
+msgstr ""
+
+#: /1080i/Includes_Items.xml
+msgctxt "#31204"
+msgid "Refresh Info"
 msgstr ""
 
 #: /shortcuts/overrides.xml
