pvr info update

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.39
+- Match PVR Info with other info dialogs
+
 0.9.38
 - Re-add extended info button in osd
 - Fix for single PVR info in multiwidget layout
