:art: - Add "Choose Palette" button

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -1456,3 +1456,8 @@ msgstr ""
 msgctxt "#31432"
 msgid "Music Videos by Artist Named"
 msgstr ""
+
+#: /1080i/script-skin_helper_service-ColorPicker.xml
+msgctxt "#31433"
+msgid "Choose Palette"
+msgstr ""
