updates to widgets landscape and search menu all customisable

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+0.9.40
+- Updates to landscape widget (now 4 horizontal with labels underneath)
+- Updates to search menu (now completely customisable)
+
 0.9.39
 - Match PVR Info with other info dialogs
 
