--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 - Updates to landscape widget (now 4 horizontal with labels underneath)
 - Updates to search menu (now completely customisable)
 - Fix Similar tvshows
+- Palette choice thanks to drinferno
 
 0.9.39
 - Match PVR Info with other info dialogs
