update infoline handling

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.41
+- Updates to infoline label handling
+
 0.9.40
 - Updates to landscape widget (now 4 horizontal with labels underneath)
 - Updates to search menu (now completely customisable)
