fix small landscape wall scrollbar

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 0.9.41
 - Updates to infoline label handling
+- Fix small landscape scrollbar/alphabet
 
 0.9.40
 - Updates to landscape widget (now 4 horizontal with labels underneath)
