fix square widget aspect

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 0.9.41
 - Updates to infoline label handling
 - Fix small landscape scrollbar/alphabet
+- Fix aspectratio on square widget
 
 0.9.40
 - Updates to landscape widget (now 4 horizontal with labels underneath)
