fix season info 2 info duplicate id lock-up

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 - Updates to infoline label handling
 - Fix small landscape scrollbar/alphabet
 - Fix aspectratio on square widget
+- Fix season 2 info getting locked due to duplicate id
 
 0.9.40
 - Updates to landscape widget (now 4 horizontal with labels underneath)
