add episode labels to large landscape widget

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@
 - Fix small landscape scrollbar/alphabet
 - Fix aspectratio on square widget
 - Fix season 2 info getting locked due to duplicate id
+- Add episode labels
 
 0.9.40
 - Updates to landscape widget (now 4 horizontal with labels underneath)
