sort sets by year in info

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@
 - Fix aspectratio on square widget
 - Fix season 2 info getting locked due to duplicate id
 - Add episode labels
+- Sort sets in info by year
 
 0.9.40
 - Updates to landscape widget (now 4 horizontal with labels underneath)
