--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@
 - Fix season 2 info getting locked due to duplicate id
 - Add episode labels
 - Sort sets in info by year
+- Codec flag fixes
 
 0.9.40
 - Updates to landscape widget (now 4 horizontal with labels underneath)
