--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+0.9.42
+- REQUIRES: plugin.video.themoviedb.helper
+- Remove extendedinfo and replace with TMDbHelper
+- Extra info on people/videos using TMDbHelper in skin windows
+- Allows for moving through both online and local file infos
+
 0.9.41
 - Updates to infoline label handling
 - Fix small landscape scrollbar/alphabet
