--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,8 @@
 - Remove extendedinfo and replace with TMDbHelper
 - Extra info on people/videos using TMDbHelper in skin windows
 - Allows for moving through both online and local file infos
+- Fix separator errors
+- Fix top250 not disabling
 
 0.9.41
 - Updates to infoline label handling
