fix extendedinfo string

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -47,7 +47,7 @@ msgstr ""
 
 #: /1080i/Custom_1119_EnableInfoLists.xml
 msgctxt "#31007"
-msgid "Use script.extendedinfo"
+msgid "Use online information"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
