--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,8 @@
 - Fix separator errors
 - Fix top250 not disabling
 - Add Image viewer for persons
+- Add TMDb Helper support to OSD button
+- Re-arrange some lists
 
 0.9.41
 - Updates to infoline label handling
