--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.43
+- Add DBID icons to 1136 person info
+
 0.9.42
 - REQUIRES: plugin.video.themoviedb.helper
 - Remove extendedinfo and replace with TMDbHelper
