make themoviedb helper widgets open info

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 0.9.43
 - Add DBID icons to 1136 person info
+- Make themoviedb helper widgets open info
 
 0.9.42
 - REQUIRES: plugin.video.themoviedb.helper
