standardise widget heights

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 0.9.43
 - Add DBID icons to 1136 person info
 - Make themoviedb helper widgets open info
+- Standardise widget heights
 
 0.9.42
 - REQUIRES: plugin.video.themoviedb.helper
