fix browse/play button label

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 - Add DBID icons to 1136 person info
 - Make themoviedb helper widgets open info
 - Standardise widget heights
+- Fix browse/play label
 
 0.9.42
 - REQUIRES: plugin.video.themoviedb.helper
