add duration small landscape

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@
 - Standardise widget heights
 - Fix browse/play label
 - Fix for minimal busy loader on 1136 and filepath now playing overlap
+- Fix for duration on small landscape youtube
 
 0.9.42
 - REQUIRES: plugin.video.themoviedb.helper
