--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.44
+- Fix for plot overlay auto display
+
 0.9.43
 - Add DBID icons to 1136 person info
 - Make themoviedb helper widgets open info
