--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,8 @@
 - Fix for plot overlay auto display
 - Remove extendedinfo completely
 - Update submenu hubs to new widget styles
+- Remove labels from aura showcase views
+
 
 0.9.43
 - Add DBID icons to 1136 person info
