updates to sets info

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.45
+- Updates to Sets info
+
 0.9.44
 - Fix for plot overlay auto display
 - Remove extendedinfo completely
@@ -5,7 +8,6 @@
 - Remove labels from aura showcase views
 - Standardise searchlists to match widgets
 - Add Netflix default search list option
-
 
 0.9.43
 - Add DBID icons to 1136 person info
