sets info updates

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
 0.9.45
 - Updates to Sets info
+- Show dbid indicator in sets
+- Change container.content checks in info to ListItem.DBType checks
 
 0.9.44
 - Fix for plot overlay auto display
