--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 0.9.47
 - NextAired view options
 - Episode widgets use tvshow not season posters
+- Kiosk mode
 
 0.9.46
 - Add blur effect settings
