--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@
 - Episode widgets use tvshow not season posters
 - Kiosk mode
 - Lengthen fixed-width horizontal home menu when clock is disabled
+- FromDirector sortby=year
 
 0.9.46
 - Add blur effect settings
