fix musicosd setrating

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@
 - Lengthen fixed-width horizontal home menu when clock is disabled
 - FromDirector sortby=year
 - Fix missing scrollbars
+- Fix music osd rating
 
 0.9.46
 - Add blur effect settings
