fix for vis timeperimage

--- a/changelog.txt
+++ b/changelog.txt
@@ -8,6 +8,7 @@
 - Fix music osd rating
 - Fix for colorbox settings
 - Fix for TMDb helper mouse issue
+- Make music vis respect timeperimage var
 
 0.9.46
 - Add blur effect settings
