--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+0.9.48
+- Options for info in pvr guide
+- Options for channel numbers in slim pvr guide
+- Addition of top menu in pvr guide
+
 0.9.47
 - NextAired view options
 - Episode widgets use tvshow not season posters
