--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 - Options for info in pvr guide
 - Options for channel numbers in slim pvr guide
 - Addition of top menu in pvr guide
+- Add quick jump for PVR
 
 0.9.47
 - NextAired view options
