--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@
 - Add quick jump for PVR
 - Add title labels to pvr widgets
 - Fixes for landscape pvr widget icons
+- Seek numeric and pvr channel seek
 
 0.9.47
 - NextAired view options
