--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@
 - Add title labels to pvr widgets
 - Fixes for landscape pvr widget icons
 - Seek numeric and pvr channel seek
+- Update playerprocessinfo
 
 0.9.47
 - NextAired view options
