fix for plugins browse/play button

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@
 - Fixes for landscape pvr widget icons
 - Seek numeric and pvr channel seek
 - Update playerprocessinfo
+- Fix for browse/play in info for plugins
 
 0.9.47
 - NextAired view options
