--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.49
+- Fix OSD covering subtitles when adjusting offset
+
 0.9.48
 - Options for info in pvr guide
 - Options for channel numbers in slim pvr guide
