--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 0.9.49
 - Fix OSD covering subtitles when adjusting offset
+- Fix default showcase starrating (not imdb)
 
 0.9.48
 - Options for info in pvr guide
