improve notification visibility

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 - Fix OSD covering subtitles when adjusting offset
 - Fix default showcase starrating (not imdb)
 - Add LibreELEC and CoreELEC setting options
+- Improve notification visibility
 
 0.9.48
 - Options for info in pvr guide
