finish time osd

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@
 - Fix default showcase starrating (not imdb)
 - Add LibreELEC and CoreELEC setting options
 - Improve notification visibility
+- Add now finish time for 6button remotes
 
 0.9.48
 - Options for info in pvr guide
