--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@
 - Add LibreELEC and CoreELEC setting options
 - Improve notification visibility
 - Add now finish time for 6button remotes
+- Add extendedprogress to basic home
 
 0.9.48
 - Options for info in pvr guide
