fix for small widget text focus

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.50
+- Fix for small landscape and small square widget text
+
 0.9.49
 - Fix OSD covering subtitles when adjusting offset
 - Fix default showcase starrating (not imdb)
