--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 0.9.50
 - Fix for small landscape and small square widget text
 - Fix for old v6 of next aired
+- Fix for alphabet strip wrap-around
 
 0.9.49
 - Fix OSD covering subtitles when adjusting offset
