gallery fanart fullscreen viewer

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.51
+- Add fanart gallery fullscreen viewer
+
 0.9.50
 - Fix for small landscape and small square widget text
 - Fix for old v6 of next aired
