add icon wall to myprograms

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 0.9.51
 - Add fanart gallery fullscreen viewer
+- Add Icon wall to programs
 
 0.9.50
 - Fix for small landscape and small square widget text
