fix for tmdbhelper info on osd

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 0.9.51
 - Add fanart gallery fullscreen viewer
 - Add Icon wall to programs
+- Fix TMDbHelper info in OSD
 
 0.9.50
 - Fix for small landscape and small square widget text
