fix for long overlap codecs

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,8 @@
 - Add fanart gallery fullscreen viewer
 - Add Icon wall to programs
 - Fix TMDbHelper info in OSD
+- Fix for too long studio/language tags
+- Fix for too long filepath
 
 0.9.50
 - Fix for small landscape and small square widget text
