--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -1471,3 +1471,8 @@ msgstr ""
 msgctxt "#31433"
 msgid "Choose Palette"
 msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31434"
+msgid "Clear Art with Seek Bar"
+msgstr "Clear Art with Seek Bar"
