dont show info when seeking if alway on info

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 0.9.52
 - Fix for busy spinner on home screen
 - Clock to music vis
+- Fix for always on osd info to not show when seeking
 
 0.9.51
 - Add fanart gallery fullscreen viewer
