--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -721,7 +721,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31145"
-msgid "Always display on-screen info"
+msgid "Display additional on-screen information with controls or when paused"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
