language tag options

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.53
+- Options to disable/enable language/country/codec tags
+
 0.9.52
 - Fix for busy spinner on home screen
 - Clock to music vis
