--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 0.9.53
 - Options to disable/enable language/country/codec tags
+- Remove IconWall from AEL
 
 0.9.52
 - Fix for busy spinner on home screen
