--- a/language/resource.language.ru_ru/strings.po
+++ b/language/resource.language.ru_ru/strings.po
@@ -1066,7 +1066,7 @@ msgstr ""
 #: /shortcuts/overrides.xml
 msgctxt "#31233"
 msgid "Random TV Shows"
-msgstr "Случайные телешоу"
+msgstr "Случайные ТВ-шоу"
 
 msgctxt "#31236"
 msgid "Now playing..."
@@ -1124,7 +1124,7 @@ msgstr "Видео / Музыка"
 
 msgctxt "#31271"
 msgid "Single Image"
-msgstr "Одиночное изображение"
+msgstr "Одно изображение"
 
 msgctxt "#31272"
 msgid "Multi Image"
@@ -1133,7 +1133,7 @@ msgstr "Несколько изображений"
 #: /shortcuts/overrides.xml
 msgctxt "#31274"
 msgid "TvShow Genres"
-msgstr "Жанры TvShow"
+msgstr "Жанры ТВ-шоу"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31275"
@@ -1190,7 +1190,7 @@ msgstr "Узлы кино"
 #: /shortcuts/overrides.xml
 msgctxt "#31297"
 msgid "TvShow Nodes"
-msgstr "Узлы телепередач"
+msgstr "Узлы ТВ-шоу"
 
 #: /1080i/Includes_View_List.xml
 msgctxt "#31298"
@@ -1205,7 +1205,7 @@ msgstr "Узлы музыки"
 #: /shortcuts/overrides.xml
 msgctxt "#31301"
 msgid "TV Shows"
-msgstr "Телепередачи"
+msgstr "ТВ-шоу"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31302"
@@ -1315,7 +1315,7 @@ msgstr "Большие постеры"
 #: /shortcuts/overrides.xml
 msgctxt "#31367"
 msgid "Recently Added TV Shows"
-msgstr "Недавно добавленные телешоу"
+msgstr "Недавно добавленные ТВ-шоу"
 
 #: /1080i/EventLog.xml
 msgctxt "#31374"
@@ -1475,4 +1475,4 @@ msgstr "Выберите палитру"
 #: /1080i/SkinSettings.xml
 msgctxt "#31434"
 msgid "Clearart with seekbar"
-msgstr "Clearart с навигацией"
+msgstr "ClearArt с навигацией"
