--- a/language/resource.language.ru_ru/strings.po
+++ b/language/resource.language.ru_ru/strings.po
@@ -483,7 +483,7 @@ msgstr "Узкий ТелеГид"
 #: /1080i/SkinSettings.xml
 msgctxt "#31094"
 msgid "Apply colordiffuse to icons"
-msgstr "Применить цветопередачу к логотипам"
+msgstr "Применить цветообработку к логотипам"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31095"
