--- a/language/resource.language.ru_ru/strings.po
+++ b/language/resource.language.ru_ru/strings.po
@@ -93,7 +93,7 @@ msgstr "Выберите элементы диалогов информации"
 #: /1080i/SkinSettings.xml
 msgctxt "#31016"
 msgid "Mirror mediainfo viewtypes"
-msgstr "Включить отражения для шаблонов медиаинформации"
+msgstr "Включить отражения для элементов медиаинформации"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31017"
