--- a/language/resource.language.ru_ru/strings.po
+++ b/language/resource.language.ru_ru/strings.po
@@ -591,7 +591,7 @@ msgstr "10 секунд"
 
 msgctxt "#31118"
 msgid "Display artist slideshow"
-msgstr "Показать слайд-шоу исполнителя"
+msgstr "Показывать слайд-шоу исполнителя"
 
 msgctxt "#31119"
 msgid "Display visualisation behind slideshow"
@@ -599,7 +599,7 @@ msgstr "Отображение визуализации за слайд-шоу"
 
 msgctxt "#31120"
 msgid "Animate artist slideshow"
-msgstr "Анимированное слайд-шоу исполнителей"
+msgstr "Анимировать слайд-шоу исполнителя"
 
 msgctxt "#31121"
 msgid "Fanart"
