--- a/language/resource.language.ru_ru/strings.po
+++ b/language/resource.language.ru_ru/strings.po
@@ -969,7 +969,7 @@ msgstr "Выбор обложки (Artwork Beef)"
 #: /shortcuts/overrides.xml
 msgctxt "#31196"
 msgid "In Progress TV Shows"
-msgstr "Просматриваемые телешоу"
+msgstr "Просматриваемые"
 
 #: /1080i/Includes_Items.xml
 msgctxt "#31197"
@@ -1032,7 +1032,7 @@ msgstr "Недавно добавленные серии"
 #: /shortcuts/overrides.xml
 msgctxt "#31216"
 msgid "In Progress Movies"
-msgstr "Просматриваемые фильмы"
+msgstr "Просматриваемые"
 
 #: /1080i/Includes_Home.xml
 msgctxt "#31217"
@@ -1042,7 +1042,7 @@ msgstr "Изменить местоположение"
 #: /shortcuts/overrides.xml
 msgctxt "#31218"
 msgid "In Progress Episodes"
-msgstr "Просматриваемые серии"
+msgstr "Просматриваемые"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31222"
@@ -1460,7 +1460,7 @@ msgstr "В очереди"
 #: /1080i/Includes_View_51_Wall.xml
 msgctxt "#31431"
 msgid "Landscape Wall Small"
-msgstr "Маленькая стена"
+msgstr "Компактная стена"
 
 #: /1080i/Custom_1138_Search.xml
 msgctxt "#31432"
