--- a/language/resource.language.ru_ru/strings.po
+++ b/language/resource.language.ru_ru/strings.po
@@ -969,7 +969,7 @@ msgstr "Выбор обложки (Artwork Beef)"
 #: /shortcuts/overrides.xml
 msgctxt "#31196"
 msgid "In Progress TV Shows"
-msgstr "Просматриваемые"
+msgstr "Просматриваемые телешоу"
 
 #: /1080i/Includes_Items.xml
 msgctxt "#31197"
@@ -1032,7 +1032,7 @@ msgstr "Недавно добавленные серии"
 #: /shortcuts/overrides.xml
 msgctxt "#31216"
 msgid "In Progress Movies"
-msgstr "Просматриваемые"
+msgstr "Просматриваемые фильмы"
 
 #: /1080i/Includes_Home.xml
 msgctxt "#31217"
@@ -1042,7 +1042,7 @@ msgstr "Изменить местоположение"
 #: /shortcuts/overrides.xml
 msgctxt "#31218"
 msgid "In Progress Episodes"
-msgstr "Просматриваемые"
+msgstr "Просматриваемые серии"
 
 #: /shortcuts/overrides.xml
 msgctxt "#31222"
